アナリティクスの実装 (#35)
* アナリティクスの実装

* fix golang lint
